resolution mobile bugs

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 .row {
     height: 100%;
-    width: 100%;
+    min-width: 100%;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 50px;
@@ -31,7 +31,7 @@
 }
 
 .row .contentWrapper {
-    width: 100%;
+    min-width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -125,7 +125,7 @@
 
 @media (max-width: 768px) {
     .row {
-        width: 100%;
+        min-width: 100%;
         height: 80%;
     }
 
@@ -203,7 +203,7 @@ a:hover {
 #header {
     box-sizing: border-box;
     height: 70px;
-    width: 100%;
+    min-width: 100%;
     padding: 1rem;
     display: flex;
     align-items: center;
@@ -300,7 +300,6 @@ h1 p {
 
 
 .service-button {
-    display: inline-block;
     margin-top: 20px;
     margin-right: 10px;
     padding: 10px 20px;
@@ -337,7 +336,7 @@ h1 p {
     #menu {
         display: block;
         position: absolute;
-        width: 100%;
+        min-width: 100%;
         top: 70px;
         right: 0px;
         background: #a3a3a3;
